[package]
name = "gat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
logic-lock = { git = "https://github.com/nappa85/logic-lock.git", branch = "cow" }
sea-orm = { git = "https://github.com/nappa85/sea-orm.git", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.21.2", features = ["macros", "rt", "rt-multi-thread", "fs", "signal", "sync"] }
warp = "0.3.3"
